src/objects/SIGN_AgreementEvent__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Ago__c</fullName>
        <formula>now() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Ago</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGN_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Events</relationshipLabel>
        <relationshipName>R00N30000001RxRaEAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(CONTAINS( Description__c , &quot;sent&quot;), &quot;SENT&quot;, IF(CONTAINS( Description__c , &quot;signed&quot;),&quot;SIGNED&quot;,IF(CONTAINS( Description__c , &quot;viewed&quot;),&quot;VIEWED&quot;,&quot;OTHER&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Agreement Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>